# ApplyWise

./: .gitignore  .pre-commit-config.yaml  README.md  master_resume.tex  pipeline.py  pyproject.toml  tailor_cv.py
config/: README.md  prompts.yaml  settings.py
configs/crawl/: link.yaml
data/: README.md  app.db
logs/: README.md
old/: linkdin.py  pipeline.py  tailor_cv.py
scripts/: README.md
scripts/db/: cv_insert.py  init_db.py  reset_db.py  seed_db.py
scripts/update_readme/: tree_utils.py  update_all_readmes.py  update_readme.py
src/: README.md  main.py
src/agents/: crawler.py  linkedin_germany_filtered.json
src/constants/: filters.py
src/core/: exceptions.py
src/crawlers/: base.py  linkedin.py
src/crawlers/parsers/: linkedin_job_description_parser.py
src/db/: bootstrap.py  init_db.py  models.py  session.py
src/db/repositories/: job_repo.py  keyword_repo.py  user_repo.py
src/llms/: base.py  gemini_provider.py
src/llms/services/: cv_tailor_service.py
src/models/: cveditpolicy.py  job.py
src/prompts/: prompts.yaml
src/resume/: latex_parser.py
src/resume/compiler/: latex_compiler.py
src/resume/storage/: resume_storage.py
src/resume/templates/: master_resume.tex
src/services/: cv_service.py  job_service.py  storage_service.py  user_service.py
src/utils/: http.py  logger.py  prompt_loader.py  time.py
src/workflows/: application_pipeline.py  cv_tailoring_pipeline.py
